# yuiclaw

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
docs/ADR/: 001-a-series-integration-and-minimalist-claws-architecture.md  README.md
src/: cli.rs  components.rs  env.rs  init.rs  main.rs  process.rs  status.rs
tests/: cli.rs
