[package]
name = "yuiclaw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yuiclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "6.0"

[dev-dependencies]
tempfile = "3"
